--- a/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
@@ -21,7 +21,7 @@
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="106.0" style="-fx-background-color: transparent;" textFill="#9f353a" />
             <MenuButton fx:id="newBtn" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      新建" textFill="#9f353a">
               <items>
-                <MenuItem fx:id="newPresentListBtn" mnemonicParsing="false" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="库存赠送单" />
+                <MenuItem fx:id="newPresentListBtn" mnemonicParsing="false" onAction="#newPresentList" style="-fx-background-color: transparent;" styleClass="ui.saleUI.Sale.css" text="库存赠送单" />
                 <MenuItem fx:id="newStockOverflowListBtn" mnemonicParsing="false" onAction="#newStockOverflowList" style="-fx-background-color: transparent;" text="库存报溢单" />
                   <MenuItem fx:id="newStockLostListBtn" mnemonicParsing="false" onAction="#newStockLostList" style="-fx-background-color: transparent;" text="库存报损单" />
               </items>
@@ -54,11 +54,15 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="draftBtn" mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="库存" textFill="#9f353a">
+            <MenuButton fx:id="personBtn1" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      库存" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
-            </Button>
+               <items>
+                  <MenuItem fx:id="StoreCheckBtn" mnemonicParsing="false" onAction="#StoreCheck" style="-fx-background-color: transparent;" text="库存查看" />
+                  <MenuItem fx:id="StoreInventoryBtn" mnemonicParsing="false" onAction="#StoreInventory" style="-fx-background-color: transparent;" text="库存盘点" />
+               </items>
+            </MenuButton>
          </children>
       </VBox>
       <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
