--- a/CPClient/src/main/resources/fxml/commonUI/GoodsSearchResultCell.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/GoodsSearchResultCell.fxml
@@ -5,11 +5,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.chart.*?>
 
-
 <HBox maxHeight="25.0" maxWidth="400.0" prefHeight="25.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="id" prefHeight="24.0" prefWidth="240.0" />
-      <Label fx:id="name" prefHeight="24.0" prefWidth="240.0" />
+      <Label fx:id="name" prefHeight="24.0" prefWidth="103.0" />
+      <Label maxHeight="24.0" minHeight="24.0" prefHeight="24.0" prefWidth="30.0" text="×" />
+      <TextField fx:id="amountTextField" maxHeight="25.0" minHeight="24.0" prefHeight="25.0" prefWidth="40.0" text="1" />
       <CheckBox fx:id="checkBox" mnemonicParsing="false" prefHeight="25.0" prefWidth="16.0" />
    </children>
 </HBox>
