--- a/CPClient/src/main/resources/fxml/mainUI/Accountant.fxml
+++ b/CPClient/src/main/resources/fxml/mainUI/Accountant.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0"  xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.mainUI.accountantUI.AccountantWinController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@../../css/mainUI/MainUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.mainUI.accountantUI.AccountantWinController">
    <children>
       <fx:include source="../commonUI/Background.fxml" />
          
@@ -17,7 +17,7 @@
          <children>
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="122.0" textFill="#9f353a" />
             <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="124.0" textFill="#9f353a" />
-            <MenuButton mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" text="      新建">
+            <MenuButton mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" stylesheets="@../../css/mainUI/MainUI.css" text="      新建">
                <items>
 	               <MenuItem fx:id="newCollectionList" mnemonicParsing="false" onAction="#onNewCollectionListBtnClicked" text="收款单" />
 	               <MenuItem fx:id="newPaymentList" mnemonicParsing="false" onAction="#onNewPaymentListBtnClicked" text="付款单" />
