--- a/CPClient/src/main/resources/fxml/mainUI/Accountant.fxml
+++ b/CPClient/src/main/resources/fxml/mainUI/Accountant.fxml
@@ -52,7 +52,7 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="62.0" prefWidth="122.0" text="账户" textFill="#9f353a">
+            <Button mnemonicParsing="false" onAction="#onAccountManageBtnClicked" prefHeight="62.0" prefWidth="122.0" text="账户管理" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
