--- a/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/Stockman.fxml
@@ -55,8 +55,8 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="draftBtn" prefHeight="63.0" prefWidth="122.0" ripplerFill="WHITE" text="库存查看" textFill="#9f353a">
-               <font>
+            <JFXButton fx:id="draftBtn" prefHeight="63.0" prefWidth="122.0" ripplerFill="WHITE" text="库存查看" textFill="#9f353a" onAction="#StoreCheck">
+               <font> 
                   <Font size="18.0" />
                </font>
             </JFXButton>
