--- a/CPClient/src/main/resources/fxml/mainUI/MessagePane.fxml
+++ b/CPClient/src/main/resources/fxml/mainUI/MessagePane.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="145.0" prefWidth="691.0" style="-fx-background-color: #FFB5B5;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.mainUI.MessagePaneController">
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="145.0" prefWidth="695.0" style="-fx-background-color: #a0e7e2;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="titleLabel" layoutX="73.0" layoutY="12.0" prefHeight="42.0" prefWidth="199.0" text="title" textFill="#d06d21">
          <font>
@@ -18,6 +18,6 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextArea fx:id="contentTextArea" editable="false" layoutX="42.0" layoutY="73.0" prefHeight="51.0" prefWidth="567.0" text="content&#10;&#10;" />
+      <TextArea fx:id="contentTextArea" editable="false" layoutX="42.0" layoutY="73.0" prefHeight="51.0" prefWidth="567.0" style="-fx-background-color: #ccea85; -fx-font-size: 15;" text="content&#10;&#10;" />
    </children>
 </Pane>
