--- a/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
@@ -132,5 +132,10 @@
                <Button fx:id="cancelBtn" layoutX="264.0" layoutY="205.0" mnemonicParsing="false" onAction="#onCancelBtnClicked" prefHeight="27.0" prefWidth="63.0" style="-fx-background-radius: 23; -fx-border-radius: 23; -fx-background-color: FF7575;" text="取消" textFill="WHITE" />
            </children>
        </Pane>
+      <JFXDialogLayout fx:id="dialogLayout" layoutX="381.0" layoutY="710.0" prefHeight="112.0" prefWidth="576.0">
+         <children>
+            <JFXDialog fx:id="dialog" prefHeight="109.0" prefWidth="575.0" />
+         </children>
+      </JFXDialogLayout>
    </children>
 </AnchorPane>
