写了下库存类单据计算的方法

--- a/CPClient/src/main/resources/fxml/commonUI/LookList.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/LookList.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxWidth="1095.0" prefHeight="680.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.commonUI.LookListController">
+<AnchorPane prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.commonUI.LookListController">
   <children>
-      <Pane prefHeight="134.0" prefWidth="1000.0" style="-fx-background-color: PINK;" AnchorPane.bottomAnchor="546.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="132.0" prefWidth="1000.0" style="-fx-background-color: PINK;" AnchorPane.bottomAnchor="518.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label layoutX="29.0" layoutY="7.0" prefHeight="50.0" prefWidth="136.0" text="单据查看" textFill="#755050">
                <font>
                   <Font name="Bodoni MT Black Italic" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="approve" layoutX="842.0" layoutY="76.0" mnemonicParsing="false" onAction="#onApprove" prefHeight="33.0" prefWidth="86.0" style="-fx-background-color: lightyellow;" text="批量通过" textFill="#c64444">
+            <Button fx:id="approve" layoutX="779.0" layoutY="76.0" mnemonicParsing="false" onAction="#onApprove" prefHeight="33.0" prefWidth="86.0" style="-fx-background-color: lightyellow;" text="批量通过" textFill="#c64444">
                <font>
                   <Font name="Bell MT Bold" size="16.0" />
                </font>
@@ -26,7 +26,7 @@
                </font>
             </Button>
             <ComboBox fx:id="comboBox" layoutX="29.0" layoutY="77.0" prefWidth="150.0" />
-            <Button fx:id="open" layoutX="707.0" layoutY="76.0" mnemonicParsing="false" onAction="#open" prefHeight="33.0" prefWidth="102.0" style="-fx-background-color: lightyellow;" text="查看单据" textFill="#c64444">
+            <Button fx:id="open" layoutX="661.0" layoutY="76.0" mnemonicParsing="false" onAction="#open" prefHeight="33.0" prefWidth="102.0" style="-fx-background-color: lightyellow;" text="查看单据" textFill="#c64444">
                <font>
                   <Font name="Bell MT Bold" size="16.0" />
                </font>
