--- a/CPClient/src/main/resources/fxml/accountUI/CashExpenseList.fxml
+++ b/CPClient/src/main/resources/fxml/accountUI/CashExpenseList.fxml
@@ -23,7 +23,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="operator" layoutX="802.0" layoutY="28.0" prefHeight="23.0" prefWidth="105.0" text="操作员名字">
+            <Label fx:id="operator" layoutX="802.0" layoutY="28.0" prefHeight="23.0" prefWidth="105.0" text="">
                <font>
                   <Font size="15.0" />
                </font>
