--- a/CPClient/src/main/resources/fxml/salesmanUI/Salesman.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/Salesman.fxml
@@ -60,11 +60,7 @@
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
       </Circle>
-      <AnchorPane fx:id="titlePane" layoutX="140.0" layoutY="102.0">
-         <children>
-            <BorderPane prefHeight="131.0" prefWidth="1054.0" style="-fx-background-color: #FFB5B5;" />
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="titlePane" layoutX="140.0" layoutY="102.0" />
       <BorderPane fx:id="centerPane" layoutX="142.0" layoutY="240.0" prefHeight="560.0" prefWidth="1054.0" />
    </children>
 </AnchorPane>
