sdibj/bj/d/ldl/

--- a/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.salesmanUI.VIPInfoEditController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.salesmanUI.vip.VIPInfoEditController">
     <children>
         <ScrollPane fx:id="scrollPane" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: #FFB5B5;">
             <content>
