--- a/CPClient/src/main/resources/fxml/salesmanUI/Salesman.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/Salesman.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
@@ -38,21 +39,11 @@
                   <MenuItem fx:id="draftStockReturnList" mnemonicParsing="false" onAction="#showDraftStockReturnList" style="-fx-background-color: transparent;" text="进货退货单" />
                </items>
             </MenuButton>
-            <MenuButton layoutX="10.0" layoutY="285.0" mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      客户" textFill="#9f353a">
+            <JFXButton fx:id="vipBtn" onAction="#setVIPBtn" prefHeight="62.0" prefWidth="122.0" text="客户" textFill="#9f353a">
                <font>
                   <Font size="18.0" />
                </font>
-            </MenuButton>
-            <MenuButton mnemonicParsing="false" popupSide="RIGHT" prefHeight="57.0" prefWidth="122.0" style="-fx-background-color: transparent;" text="      个人" textFill="#9f353a">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <items>
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="日志" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="消息" />
-                  <MenuItem mnemonicParsing="false" style="-fx-background-color: transparent;" text="个人信息" />
-               </items>
-            </MenuButton>
+            </JFXButton>
          </children>
       </VBox>
       <Circle fill="#5cfeff99" layoutX="107.0" layoutY="87.0" opacity="0.67" radius="80.0" stroke="BLACK" strokeMiterLimit="0.0" strokeWidth="0.0">
@@ -60,7 +51,7 @@
             <DropShadow blurType="GAUSSIAN" color="#c74242cf" height="0.0" radius="6.2675" width="27.07" />
          </effect>
       </Circle>
-      <AnchorPane fx:id="titlePane" layoutX="140.0" layoutY="102.0" />
-      <BorderPane fx:id="centerPane" layoutX="142.0" layoutY="240.0" prefHeight="560.0" prefWidth="1054.0" />
+      <AnchorPane fx:id="titlePane" layoutX="187.0" layoutY="140.0" prefHeight="121.0" prefWidth="608.0" />
+      <BorderPane fx:id="centerPane" layoutX="188.0" layoutY="261.0" prefHeight="491.0" prefWidth="960.0" />
    </children>
 </AnchorPane>
