相当难受 整改界面

--- a/CPClient/src/main/resources/css/stockmanUI/Stock.css
+++ b/CPClient/src/main/resources/css/stockmanUI/Stock.css
@@ -1,3 +1,7 @@
+@font-face {
+    src: url('/font/MyFont.otf');
+}
+
 .button {
      -fx-background-color: transparent;
      -fx-text-fill: #9f353a;
