--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
@@ -9,125 +9,119 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="6.0" layoutY="118.0" prefHeight="459.0" prefWidth="921.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Pane layoutY="6.0" prefHeight="59.0" prefWidth="921.0">
+      <ScrollPane prefHeight="450.0" prefWidth="927.0">
+         <content>
+            <Pane prefHeight="624.0" prefWidth="927.0">
                <children>
-                  <Label fx:id="VIPName" layoutX="211.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="VIPID" layoutX="325.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="operator" layoutX="762.0" layoutY="18.0" prefHeight="23.0" prefWidth="158.0" text="操作员名字">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="548.0" layoutY="47.0" text="默认仓库" />
-                  <Label fx:id="listID" layoutX="570.0" layoutY="16.0" prefHeight="27.0" prefWidth="177.0" text="SKD-yyyymmdd-00000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                 <TextField fx:id="searchVIPField" layoutX="14.0" layoutY="41.0" prefHeight="36.0" prefWidth="177.0" promptText="请输入查询信息" />
-                  <Label fx:id="numberErrorMessage" layoutX="659.0" layoutY="48.0" prefHeight="24.0" prefWidth="54.0" textFill="#e40808" />
-               </children>
-            </Pane>
-            <ScrollPane hbarPolicy="NEVER" layoutX="87.0" layoutY="133.0" maxHeight="250.0" maxWidth="700.0" minHeight="101.0" minWidth="700.0" prefHeight="101.0" prefWidth="700.0">
-              <content>
-                <AnchorPane prefHeight="103.0" prefWidth="700.0">
-                    <children>
-                        <VBox prefHeight="101.0" prefWidth="700.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <fx:include source="TableHead.fxml" />
-                              <VBox fx:id="goodsListVBox" prefHeight="79.0" prefWidth="700.0" />
-                           </children></VBox>
+                  <Pane layoutY="6.0" prefHeight="59.0" prefWidth="921.0">
+                     <children>
+                        <Label fx:id="VIPName" layoutX="211.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="VIPID" layoutX="325.0" layoutY="46.0" prefHeight="27.0" prefWidth="92.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="operator" layoutX="812.0" layoutY="5.0" prefHeight="22.0" prefWidth="86.0" text="操作员名字">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="listID" layoutX="635.0" layoutY="3.0" prefHeight="27.0" prefWidth="177.0" text="SKD-yyyymmdd-00000">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="numberErrorMessage" layoutX="659.0" layoutY="48.0" prefHeight="24.0" prefWidth="54.0" textFill="#e40808" />
+                        <Label layoutX="478.0" layoutY="4.0" prefHeight="24.0" prefWidth="49.0" text="仓库 " textFill="#938c8c" />
+                        <Label layoutX="306.0" layoutY="6.0" text="业务员" textFill="#938c8c" />
+                        <TextField fx:id="clerk" layoutX="359.0" layoutY="2.0" prefHeight="28.0" prefWidth="82.0" />
+                        <Button fx:id="selectVIPBtn" layoutX="199.0" layoutY="55.0" mnemonicParsing="false" onAction="#selectVIP" text="查找销售商" />
+                        <TextField fx:id="notesTextField" layoutX="576.0" layoutY="53.0" prefHeight="14.0" prefWidth="242.0" />
+                        <TextField layoutX="518.0" layoutY="1.0" prefHeight="28.0" prefWidth="80.0" text="默认仓库" />
+                     </children>
+                  </Pane>
+                  <ScrollPane hbarPolicy="NEVER" layoutX="87.0" layoutY="148.0" maxHeight="250.0" maxWidth="700.0" minHeight="101.0" minWidth="700.0" prefHeight="249.0" prefWidth="700.0">
+                    <content>
+                      <AnchorPane prefHeight="223.0" prefWidth="700.0">
+                          <children>
+                              <VBox layoutX="-3.0" prefHeight="109.0" prefWidth="703.0" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <fx:include source="TableHead.fxml" />
+                                    <VBox fx:id="goodsListVBox" prefHeight="116.0" prefWidth="703.0" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+                  <AnchorPane fx:id="saleListPane" layoutX="85.0" layoutY="417.0">
+                     <children>
+                        <Button fx:id="getPresentBtn" layoutX="732.0" layoutY="4.0" mnemonicParsing="false" onAction="#findPresent" text="获取策略" />
+                        <Label fx:id="strategyTitle" layoutX="127.0" text="使用策略列表" textFill="#171717">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ScrollPane layoutX="403.0" layoutY="27.0" prefHeight="127.0" prefViewportHeight="46.0" prefViewportWidth="702.0" prefWidth="303.0">
+                           <content>
+                              <VBox fx:id="presentListVBox" layoutX="87.0" layoutY="334.0" prefHeight="109.0" prefWidth="259.0" />
+                           </content>
+                        </ScrollPane>
+                        <Label fx:id="presentListTitle" layoutX="517.0" text="赠品列表" textFill="#111010">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ScrollPane layoutX="1.0" layoutY="30.0" prefHeight="123.0" prefViewportHeight="36.0" prefViewportWidth="700.0" prefWidth="319.0">
+                           <content>
+                              <HBox fx:id="presentHBox" layoutX="86.0" layoutY="273.0" prefHeight="56.0" prefWidth="256.0" />
+                           </content>
+                        </ScrollPane>
+                        <Label fx:id="voucherInPresent" layoutX="749.0" layoutY="96.0" prefHeight="36.0" prefWidth="36.0" />
+                        <Button layoutX="732.0" layoutY="39.0" mnemonicParsing="false" text="赠券金额" />
+                        <Label layoutX="718.0" layoutY="89.0" prefHeight="29.0" prefWidth="68.0" text="折让前总额" textFill="#938c8c" />
+                        <Label fx:id="totalAmount" layoutX="786.0" layoutY="88.0" prefHeight="26.0" prefWidth="27.0" text="0" textFill="#e12121" />
+                        <Label layoutX="717.0" layoutY="125.0" text="折让后总额" textFill="#938c8c" />
+                        <Label fx:id="sumAfterRebateLabel" layoutX="786.0" layoutY="122.0" text="0" textFill="#e12121" />
                      </children>
                   </AnchorPane>
-              </content>
-            </ScrollPane>
-            <AnchorPane fx:id="saleListPane" layoutX="85.0" layoutY="234.0">
-               <children>
-                  <Button fx:id="getPresentBtn" layoutX="719.0" layoutY="31.0" mnemonicParsing="false" onAction="#findPresent" text="获取策略" />
-                  <Label fx:id="strategyTitle" layoutX="319.0" text="使用策略列表">
+                  <Label layoutX="415.0" layoutY="120.0" text="商品列表" textFill="#111010">
                      <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-                  <ScrollPane layoutY="86.0" prefViewportHeight="46.0" prefViewportWidth="702.0">
-                     <content>
-                        <VBox fx:id="presentListVBox" layoutX="87.0" layoutY="334.0" prefHeight="46.0" prefWidth="702.0" />
-                     </content>
-                  </ScrollPane>
-                  <Label fx:id="presentListTitle" layoutX="330.0" layoutY="67.0" text="赠品列表">
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </Label>
-                  <ScrollPane layoutX="1.0" layoutY="15.0" prefHeight="15.0" prefViewportHeight="36.0" prefViewportWidth="700.0" prefWidth="702.0">
-                     <content>
-                        <HBox fx:id="presentHBox" layoutX="86.0" layoutY="273.0" prefHeight="56.0" prefWidth="700.0" />
-                     </content>
-                  </ScrollPane>
-                  <Label layoutX="728.0" layoutY="74.0" text="赠券金额" />
-                  <Label fx:id="voucherInPresent" layoutX="749.0" layoutY="96.0" prefHeight="36.0" prefWidth="36.0" />
-               </children>
-            </AnchorPane>
-            <Pane layoutY="379.0" prefHeight="80.0" prefWidth="921.0">
-               <children>
-                  <Button fx:id="saveBtn" layoutX="760.0" layoutY="51.0" mnemonicParsing="false" onAction="#save" text="保存">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <Button fx:id="commitBtn" layoutX="817.0" layoutY="51.0" mnemonicParsing="false" onAction="#commit" text="提交">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <Label layoutX="28.0" layoutY="53.0" prefHeight="27.0" prefWidth="105.0" text="折让前总额">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="totalAmount" layoutX="154.0" layoutY="53.0" prefHeight="26.0" prefWidth="105.0" text="0" textFill="#e12121">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="32.0" layoutY="14.0" text="备注" />
-                  <TextField fx:id="notesTextField" layoutX="85.0" layoutY="8.0" prefHeight="14.0" prefWidth="242.0" />
-                  <Button fx:id="cancelBtn" layoutX="873.0" layoutY="51.0" mnemonicParsing="false" onAction="#cancel" text="取消">
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Button fx:id="selectGoodsBtn" layoutX="199.0" layoutY="98.0" mnemonicParsing="false" onAction="#selectGoods" prefHeight="27.0" prefWidth="84.0" text="选择商品" />
+                  <TextField fx:id="searchGoodsField" layoutX="15.0" layoutY="96.0" prefHeight="31.0" prefWidth="165.0" />
+                  <Label fx:id="nullErrorMessage" layoutX="288.0" layoutY="99.0" prefHeight="24.0" prefWidth="83.0" textFill="#e40808" />
+                 <TextField fx:id="searchVIPField" layoutX="16.0" layoutY="54.0" prefHeight="33.0" prefWidth="164.0" />
+                  <Label layoutX="521.0" layoutY="62.0" text="备注" textFill="#938c8c" />
+                  <Label layoutX="521.0" layoutY="103.0" text="折让" textFill="#938c8c" />
+                  <TextField fx:id="rebateField" layoutX="576.0" layoutY="98.0" prefHeight="26.0" prefWidth="62.0" />
+                  <Label layoutX="679.0" layoutY="103.0" text="使用代金券" textFill="#938c8c" />
+                  <TextField fx:id="useVoucherField" layoutX="761.0" layoutY="97.0" prefHeight="28.0" prefWidth="58.0" />
+                  <Button fx:id="saveBtn" layoutX="305.0" layoutY="585.0" mnemonicParsing="false" onAction="#save" text="保存">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Label layoutX="347.0" layoutY="14.0" text="折让" />
-                  <TextField fx:id="rebateField" layoutX="394.0" layoutY="8.0" prefHeight="23.0" prefWidth="54.0" />
-                  <Label layoutX="469.0" layoutY="14.0" text="使用代金券" />
-                  <TextField fx:id="useVoucherField" layoutX="568.0" layoutY="8.0" prefHeight="36.0" prefWidth="54.0" />
-                  <Label layoutX="347.0" layoutY="53.0" text="折让后总额" />
-                  <Label fx:id="sumAfterRebateLabel" layoutX="461.0" layoutY="53.0" text="0" textFill="#e12121" />
+                  <Button fx:id="commitBtn" layoutX="415.0" layoutY="585.0" mnemonicParsing="false" onAction="#commit" text="提交">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="cancelBtn" layoutX="534.0" layoutY="585.0" mnemonicParsing="false" onAction="#cancel" text="取消">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
-            <Label layoutX="480.0" layoutY="54.0" prefHeight="23.0" prefWidth="78.0" text="仓库 " textFill="#938c8c">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
-            <Label layoutX="400.0" layoutY="100.0" text="商品列表" />
-            <Button fx:id="selectGoodsBtn" layoutX="804.0" layoutY="91.0" mnemonicParsing="false" onAction="#selectGoods" text="选择商品" />
-            <TextField fx:id="searchGoodsField" layoutX="550.0" layoutY="93.0" prefHeight="36.0" prefWidth="177.0" />
-            <Label fx:id="nullErrorMessage" layoutX="194.0" layoutY="99.0" prefHeight="24.0" prefWidth="54.0" textFill="#e40808" />
-            <Button fx:id="selectVIPBtn" layoutX="48.0" layoutY="91.0" mnemonicParsing="false" onAction="#selectVIP" text="查找销售商" />
-            <TextField fx:id="clerk" layoutX="811.0" layoutY="48.0" prefHeight="23.0" prefWidth="96.0" />
-            <Label layoutX="750.0" layoutY="54.0" text="业务员" />
-         </children>
-      </Pane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
