--- a/CPClient/src/main/resources/fxml/salesmanUI/StockListTitle.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/StockListTitle.fxml
@@ -9,11 +9,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="titlePane" style="-fx-background-color: #FFF7FB;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.salesmanUI.SalesmanController">
+<AnchorPane fx:id="titlePane" prefHeight="131.0" prefWidth="921.0" style="-fx-background-color: #FFB5B5;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.salesmanUI.SalesmanController">
     <children>
-      <BorderPane layoutX="140.0" layoutY="102.0" prefHeight="131.0" prefWidth="920.0" style="-fx-background-color: #FFB5B5;" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <left>
-            <Label prefHeight="24.0" prefWidth="219.0" text="         进货单" BorderPane.alignment="CENTER" />
-         </left></BorderPane>
+      <Label layoutX="68.0" layoutY="34.0" prefHeight="32.0" prefWidth="65.0" text="进货单">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="44.0" layoutY="24.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
    </children>
 </AnchorPane>
