库存报损、报溢、查看、审批、批量审批的基本逻辑写好并测试了。

--- a/CPClient/src/main/resources/fxml/stockmanUI/ReportList.fxml
+++ b/CPClient/src/main/resources/fxml/stockmanUI/ReportList.fxml
@@ -61,7 +61,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="GoodsName" layoutX="156.0" layoutY="197.0" prefHeight="24.0" prefWidth="178.0" text="请先输入编号">
+            <Label fx:id="goodsName" layoutX="156.0" layoutY="197.0" prefHeight="24.0" prefWidth="178.0" text="请先输入编号">
                <font>
                   <Font size="18.0" />
                </font>
