调整了一些vbox的显示问题

--- a/CPClient/src/main/resources/fxml/commonUI/OpenListOfForms.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/OpenListOfForms.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -22,7 +23,7 @@
       </Pane>
       <ScrollPane hbarPolicy="NEVER" layoutY="122.0" prefHeight="472.0" prefWidth="921.0">
         <content>
-             <VBox fx:id="vBox" prefHeight="464.0" prefWidth="910.0" />
+             <VBox fx:id="vBox" prefHeight="464.0" prefWidth="910.0" spacing="20.0" />
         </content>
       </ScrollPane>
    </children>
