--- a/CPClient/src/main/resources/fxml/commonUI/Background.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/Background.fxml
@@ -22,7 +22,7 @@
                         <Font name="System Bold Italic" size="23.0" />
                     </font>
                 </Label>
-                <ImageView fx:id="logOutBtn" layoutX="1148.0" layoutY="14.0" onMouseClicked="#logOut">
+                <ImageView fx:id="logOutBtn" fitHeight="28.0" fitWidth="30.0" layoutX="1148.0" layoutY="14.0" onMouseClicked="#logOut">
                     <image>
                         <Image url="@../../img/logOut.png" />
                     </image>
