--- a/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/SaleTypeList.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane prefHeight="450.0" prefWidth="927.0">
+      <ScrollPane maxHeight="1.7976931348623157E308" prefHeight="450.0" prefWidth="927.0">
          <content>
             <Pane prefHeight="624.0" prefWidth="927.0">
                <children>
