--- a/CPClient/src/main/resources/fxml/commonUI/VIPSearchResultCell.fxml
+++ b/CPClient/src/main/resources/fxml/commonUI/VIPSearchResultCell.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.chart.*?>
 
-<HBox maxHeight="25.0" maxWidth="400.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="25.0" maxWidth="457.0" minHeight="-Infinity" minWidth="457.0" prefHeight="25.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="id" prefHeight="24.0" prefWidth="135.0" />
       <Label fx:id="name" prefHeight="24.0" prefWidth="112.0" />
