--- a/CPClient/src/main/resources/fxml/salesmanUI/StockTypeList.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/StockTypeList.fxml
@@ -73,7 +73,7 @@
             </Pane>
             <Label layoutX="400.0" layoutY="100.0" text="商品列表" />
             <Button fx:id="selectGoodsBtn" layoutX="207.0" layoutY="93.0" mnemonicParsing="false" onAction="#selectGoods" prefHeight="27.0" prefWidth="84.0" text="选择商品" />
-            <TextField fx:id="searchGoodsField" layoutX="14.0" layoutY="93.0" prefHeight="36.0" prefWidth="177.0" />
+            <TextField fx:id="searchGoodsField" layoutX="14.0" layoutY="93.0" prefHeight="36.0" prefWidth="177.0" promptText="请输入查询信息"/>
             <Label fx:id="nullErrorMessage" layoutX="305.0" layoutY="99.0" prefHeight="24.0" prefWidth="83.0" textFill="#e40808" />
             <Label layoutX="531.0" layoutY="59.0" text="备注" />
             <TextField fx:id="notesTextField" layoutX="565.0" layoutY="48.0" prefHeight="14.0" prefWidth="242.0" />
